kubernetes/42/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: ingress-apisix
  labels:
    name: ingress-apisix
